--- a/00.Home/My First JavaScript.html
+++ b/00.Home/My First JavaScript.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>My First JavaScript</title>
 </head>
 <body>
-$END$
+    <h1>My First JavaScript</h1>
+
+    <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
+        Click me to display Date and Time.
+    </button>
+
+    <p id="demo"></p>
 </body>
 </html>
