--- a/01.Introduction/JavaScript Can Change HTML Content.html
+++ b/01.Introduction/JavaScript Can Change HTML Content.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>JavaScript Can Change HTML Content</title>
 </head>
 <body>
-$END$
+    <h1>What Can JavaScript Do?</h1>
+
+    <p id="demo">
+        JavaScript can change HTML content
+    </p>
+    <button type="button" onclick="document.getElementById('demo').innerHTML = 'Hi JavaScript！single quotes'">
+        single quotes 点我！
+    </button>
+
+    <button type="button" onclick='document.getElementById("demo").innerHTML = "Hi JavaScript！double quotes"'>
+        double quotes 点我！
+    </button>
 </body>
 </html>
