--- a/05.Statements/JavaScript Statements.html
+++ b/05.Statements/JavaScript Statements.html
@@ -15,7 +15,7 @@
 <p id="line"></p>
 
 <h4>JavaScript Code Blocks</h4>
-<p id="code_blocks">Hi</p>
+<p id="code-blocks">Hi</p>
 <button onclick="change()">change</button>
 <script>
     document.getElementById("statement").innerHTML = "Hello Dolly.";
