--- a/07.Variables/JavaScript Variables.html
+++ b/07.Variables/JavaScript Variables.html
@@ -21,6 +21,17 @@
 <p id="carName"></p>
 <p id="price"></p>
 
+<h3>Value = undefined</h3>
+<p id="xyz"></p>
+
+<h3>Re-Declaring JavaScript Variables</h3>
+<p id="re-declaring"></p>
+
+<h3>JavaScript Arithmetic</h3>
+<p id="arithmetic"></p>
+<p id="concatenate"></p>
+<p id="first-string"></p>
+<p id="last-string"></p>
 <script>
     var x = 6;
     y = 7;
@@ -40,6 +51,19 @@
     document.getElementById("address").innerText = address;
     document.getElementById("carName").innerText = carName;
     document.getElementById("price").innerText = price;
+
+    var xyz;
+    document.getElementById("xyz").innerText = xyz;
+
+    var address;
+    document.getElementById("re-declaring").innerText = address;
+
+
+    document.getElementById("arithmetic").innerText = 1 + 3 + 5;
+    document.getElementById("arithmetic").innerText = "Hi," + " " + "Boy";
+
+    document.getElementById("first-string").innerText = "1" + 3 + 5;
+    document.getElementById("last-string").innerText = 1 + 3 + "5";
 </script>
 </body>
 </html>
