--- a/08.Operators/JavaScript Operators.html
+++ b/08.Operators/JavaScript Operators.html
@@ -13,6 +13,24 @@
 
 <h3>Multiplying</h3>
 <p id="multiplying"></p>
+
+<h3>JavaScript Arithmetic Operators</h3>
+<p id="addition"></p>
+<p id="subtraction"></p>
+<p id="multiplication"></p>
+<p id="division"></p>
+<p id="modulus"></p>
+<p id="increment"></p>
+<p id="decrement"></p>
+
+<h3>JavaScript Assignment Operators</h3>
+<p id="addition-assignment"></p>
+<p id="subtraction-assignment"></p>
+<p id="multiplication-assignment"></p>
+<p id="division-assignment"></p>
+<p id="modulus-assignment"></p>
+<p id="increment-assignment"></p>
+<p id="decrement-assignment"></p>
 <script>
     var x = 10;
     document.getElementById('assignment').innerHTML = x;
@@ -23,6 +41,24 @@
 
     z = x * y;
     document.getElementById('multiplying').innerHTML = z;
+
+    z = x + y;
+    document.getElementById('addition').innerHTML = z;
+    z = x - y;
+    document.getElementById('subtraction').innerHTML = z;
+    z = x * y;
+    document.getElementById('multiplication').innerHTML = z;
+    z = x / y;
+    document.getElementById('division').innerHTML = z;
+    z = x % y;
+    document.getElementById('modulus').innerHTML = z;
+    x++;
+    document.getElementById('increment').innerHTML = x;
+    y--;
+    document.getElementById('decrement').innerHTML = y;
+
+
+
 </script>
 </body>
 </html>
