--- a/08.Operators/JavaScript Operators.html
+++ b/08.Operators/JavaScript Operators.html
@@ -37,6 +37,32 @@
 <h3>Adding Strings and Numbers</h3>
 <p id="number"></p>
 <p id="string-number"></p>
+
+<h3>JavaScript Comparison Operators</h3>
+<p id="nubmer-equal-to-string"></p>
+<p id="equal-value-and-type"></p>
+<p id="greater-than"></p>
+<p id="less-than"></p>
+<p id="greater-than-or-equal-to"></p>
+
+<h3>JavaScript Logical Operators</h3>
+<p id="logical-and"></p>
+<p id="logical-or"></p>
+<p id="logical-not"></p>
+
+<h3>JavaScript Type Operators</h3>
+<p id="typeof"></p>
+<p id="instance-of-date"></p>
+<p id="instance-of-object"></p>
+
+<h3>JavaScript Bitwise Operators</h3>
+<p id="and"></p>
+<p id="or"></p>
+<p id="not"></p>
+<p id="xor"></p>
+<p id="zero-fill-left-shift"></p>
+<p id="signed-right-shift"></p>
+<p id="zero-fill-right-shift"></p>
 <script>
     var x = 10;
     document.getElementById('assignment').innerHTML = x;
@@ -86,6 +112,34 @@
     document.getElementById('number').innerHTML = number;
     var stringNumber = "5" + 20;
     document.getElementById('string-number').innerHTML = stringNumber;
+
+    var numberFive = 5, stringFive = '5';
+    document.getElementById('nubmer-equal-to-string').textContent = (numberFive == stringFive);
+    document.getElementById('equal-value-and-type').textContent = (numberFive === stringFive);
+
+    document.getElementById('greater-than').textContent = (number > stringFive);
+    document.getElementById('less-than').textContent = (number < stringFive);
+
+    document.getElementById('greater-than-or-equal-to').textContent = (numberFive >= stringFive);
+
+    var booleanTrue = true, booleanFalse = false;
+    document.getElementById('logical-and').textContent = booleanTrue && booleanFalse;
+    document.getElementById('logical-or').textContent = booleanTrue || booleanFalse;
+    document.getElementById('logical-not').textContent = !booleanTrue;
+
+    document.getElementById('typeof').textContent = typeof booleanTrue;
+    var currentDate = new Date();
+    document.getElementById('instance-of-date').textContent = currentDate instanceof Date;
+    document.getElementById('instance-of-object').textContent = currentDate instanceof Object;
+
+    document.getElementById('and').textContent = 6 & 1;
+    document.getElementById('or').textContent = 6 | 1;
+    document.getElementById('not').textContent = ~6;
+    document.getElementById('xor').textContent = 6 ^ 1;
+    document.getElementById('zero-fill-left-shift').textContent = 6 << 1;
+    document.getElementById('signed-right-shift').textContent = 6 >> 1;
+    document.getElementById('zero-fill-right-shift').textContent = 6 >>> 1;
+
 
 </script>
 </body>
