--- a/JS Tutorial/01.Introduction/JavaScript Can Change HTML Attributes.html
+++ b/JS Tutorial/01.Introduction/JavaScript Can Change HTML Attributes.html
@@ -7,7 +7,7 @@
 <body>
 
 <div>
-    <img src="../images/pic_bulboff.gif" id="bulb">
+    <img src="../../images/pic_bulboff.gif" id="bulb">
 </div>
 <div>
     <button type="button" onclick="turn('on')">开💡</button>
