--- a/JS Tutorial/01.Introduction/JavaScript Can Control HTML Elements Display.html
+++ b/JS Tutorial/01.Introduction/JavaScript Can Control HTML Elements Display.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-<img id="img" src="../images/pic_bulbon.gif">
+<img id="img" src="../../images/pic_bulbon.gif">
 
 <script>
     var on = false;
